# ai-agent-os

./: .env.example  .env.stack.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEMO.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: benchmarks.yml  ci-cd.yml  coderabbit.yml  security.yml
deploy/docker/: Dockerfile.gateway  Dockerfile.keycloak  Dockerfile.librechat  Dockerfile.searxng  gateway-entrypoint.sh  keycloak-entrypoint.sh  searxng-entrypoint.sh
deploy/fly/: api-gateway.fly.toml  keycloak.fly.toml  librechat.fly.toml  mongo.fly.toml  sandbox.fly.toml  searxng.fly.toml
deploy/librechat/: librechat.yaml
deploy/sandbox/: Dockerfile  README.md  pyproject.toml
deploy/sandbox/app/: main.py
deploy/searxng/: settings.yml
docker/: Dockerfile  docker-compose.yml
docs/: DEPLOYMENT_ARCHITECTURE.md  ENTERPRISE_INTEGRATIONS.md  FEATURES_AND_TOOLS.md  GITHUB_SECRETS.md  PROJECTS_COMPARISON.md  PYTHON_INTEGRATION_ROADMAP.md  SSO_SETUP.md  UNIFIED_PLATFORM_GUIDE.md  cybersecurity-demo-report.md
src/: setup.ts
src/agents/: communication.ts  sub-agent-manager.ts
src/api/: anthropic-provider.ts  openai-provider.ts  provider-factory.ts  provider-interface.ts
src/api-gateway/: README.md  index.ts  server.ts
src/auto-healing/: circuit-breaker.ts  error-analyzer.ts  healing-log.ts  index.ts  manager.ts  retry-strategy.ts  types.ts
src/cli/: commands.ts  tui.tsx
src/config/: env-loader.ts  feature-flags.ts  paths.ts
src/core/: agent-loop.ts  auto-dream.ts  executor.ts  orchestrator.ts  planner.ts
src/demos/: run-security-demo.ts  security-demo.ts
src/features/: bridge.ts  buddy.ts  coordinator.ts  kairos.ts  ultraplan.ts
src/gateway/: composio-gateway.ts
src/hooks/: lifecycle-hooks.ts
src/identity/: kavach-auth.ts
src/integrations/: index.ts
src/memory/: graph-memory.ts  hybrid-retriever.ts  index.ts  long-term.ts  short-term.ts  summarizer.ts  temporal-memory.ts
src/observability/: agentwatch-adapter.ts  langfuse-tracer.ts  openlit-tracer.ts  posthog-analytics.ts
src/orchestration/: crew.ts  group-chat.ts  (+5 more)
(+175 files in other folders)
