[project]
name = "ai-agent-os-sandbox"
version = "1.0.0"
description = "Code-execution MCP worker for the AI Agent OS Manager."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "mcp>=1.2.0",
  # web.scrape — Scrapling Fetcher (HTTP + smart parsing). The optional
  # PlayWrightFetcher / StealthyFetcher modes need a browser install; we
  # keep the slim install here and lazy-import in app.scrape so a missing
  # dependency surfaces as a tool-level error instead of a boot crash.
  "scrapling>=0.2",
  "lxml>=5.2",
  # Scrapling's HTTP Fetcher resolves `curl_cffi` at call-time, so bundle it
  # explicitly to avoid a runtime ModuleNotFoundError on first scrape.
  "curl_cffi>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
